--- a/public/styles2.css
+++ b/public/styles2.css
@@ -1,47 +1,60 @@
-.nav-item{
-    padding: 0 10px;
-}
-.navbar-nav{
-    margin-right: 30px;
+.select{
+    width:150px;
 }
 
-.logo{
-    /* width: 70px; */
-    
+.status-button{
+    color:#FF6D28 !important;
+    border : 1.5px solid #FF6D28 !important;
 }
 
-.navbar{
-    background-color: black;
-    color: white;
-     font-weight: 600 ;
-}
-.food-item{
-    /* padding: 5px; */
-    border-radius: 25px;
-   
-    border: 1.5px solid;
-    width : 302px;
-    text-align: center;
-    align-items: center;
-    margin : 15px 0;
-    padding-bottom: 10px;;
+.status-button:hover{ 
+    background-color:#FF6D28 !important;
+    color: white !important;
 }
 
-/* .food-item img{
-    width: 300px;
-    height: 200px;
-    border-radius: 25px;
-} 
 
 
-.cart-button{
-    margin-top: 10px;;
+
+
+.item{
+  height : 280px;
+  margin: 30px 15px;
+  padding: 20px !important;
+  display: flex;
+  /* background-color:#ffffff; */
+   border-radius: 9px; 
+  box-shadow: 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  
 }
 
-.cart{
-    background-color: bl;
-} */
+.items-container{
+  justify-content: center;
+}
 
-a{
-    text-decoration: none;
+.item img{
+  max-width: 50%;
+  height: 240px;
+}
+
+.item-info{
+  /* justify-content: center; */
+  margin: 0 0 0 20px;
+}
+
+.btn-light{
+  background-color: #eae7e7 !important;
+  text-align: center !important;
+  justify-content: center !important;
+}
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Sevillana&display=swap');
+
+
+.fontitem{
+    font-family: 'Roboto', sans-serif;
+}
+
+.fontheading{
+    font-family: 'Sevillana', cursive;
 }
